--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          destination-github-username: 'ICEI-PUC-Minas-PPLES-TI'
-          destination-repository-name: 'plf-es-2022-1-tcci-5308100-pes-gabriel-chaves-ian-bittencourt'
+          destination-github-username: 'ianbandrade'
+          destination-repository-name: 'ICEI-PUC-Minas-PPLES-TI/plf-es-2022-1-tcci-5308100-pes-gabriel-chaves-ian-bittencourt'
           user-email: ian.andrade@sga.pucminas.br
           commit-message: See ORIGIN_COMMIT from $GITHUB_REF
           target-branch: master
